Fix some minor layout issues

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -73,3 +73,6 @@ $primary-invert: $kaldi-red-invert
 
 .g-recaptcha 
   display: inline-block
+
+.section
+  padding: 0 0
